--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -23,7 +23,7 @@ $red: #DE3131;
 
 textarea {
 	width: 100%;
-	height: calc(100%);
+	height: calc(100% - 12px);
 	
 	background: inherit;
 	color: inherit;
